# nmail

./: .gitignore  .travis.yml  Brewfile  CMakeLists.txt  DEBUGGING.md  LICENSE  README.md  genman.sh  make.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linux.yml  macos.yml  release.yml
cmake/: FindSQLite3.cmake
doc/: DEBUGGING.md  PRIVACY.md  signature.html  signature.txt
etc/: uncrustify.cfg
ext/cereal/include/cereal/details/: traits.hpp
ext/cereal/unittests/: doctest.h
ext/cyrus-imap/lib/: imapurl.c  imapurl.h
ext/libetpan/: CMakeLists.txt
ext/libetpan/build-cmake/: libetpan_version.h
ext/libetpan/src/data-types/: carray.h  charconv.c  chash.h  clist.h
ext/libetpan/src/low-level/imap/: mailimap.h
ext/sqlite_modern_cpp/hdr/: sqlite_modern_cpp.h
ext/utfcpp/source/utf8/: checked.h  core.h  unchecked.h
src/: addressbook.cpp  addressbook.h  aes.cpp  aes.h  auth.cpp  auth.h  body.cpp  body.h  buildinfo.h.in  cacheutil.cpp  cacheutil.h  config.cpp  config.h  contact.cpp  contact.h  crypto.cpp  crypto.h  debuginfo.cpp  debuginfo.h  encoding.cpp  encoding.h  flag.cpp  flag.h  header.cpp  header.h  html2nmail  imap.cpp  imap.h  imapcache.cpp  imapcache.h  imapindex.cpp  imapindex.h  imapmanager.cpp  imapmanager.h  imaputil.cpp  imaputil.h  libetpan_help.h  lockfile.cpp  lockfile.h  log.cpp  (+38 more)
themes/: catppuccin-macchiato.conf  default.conf  htop-style.conf
util/: debug-nmail.sh  nmail_to_maildir.sh
utils/: btsymbols  debug-nmail.sh  embedfile.cmake  install.sh  mkdemo  uninstall.sh
